<resources>
<string name="app_name">Calender</string>
<string name="back"><![CDATA[<-]]></string>
<string name="forward"><![CDATA[->]]></string>
    <string name="feb_2021">Feb 2021</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thur">THUR</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="new_event">New Event</string>
    <string name="_1">1</string>
    <string name="description">Description:</string>
    <string name="title">Title:</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="save">Save</string>
    <string name="event">Event</string>
    <string name="event_description">Event Description</string>
</resources>